ui fixes - header text overlap, mobile view content resize, table resize, content reformat

--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,7 @@ td{
 
 .t-blank{
     background: #fff;
-    width: 10%;
+    width: 15%;
     color: #fff;
 }
 
@@ -410,6 +410,10 @@ td{
         width: 100% !important;
         margin-left: auto;
         margin-right: auto;
+    }
+    .header-hr p{
+        left:4%;
+        font-size:15px;
     }
     
     .header-hr img{
@@ -425,10 +429,10 @@ td{
         margin-top: -50px;
     }
     .content{
-        width: 300px;
+        width: 100%;
     }
     .content-body{
-        width: 300px;
+        width: 100%;
     }
     .text{
         font-size: 12px;
@@ -464,7 +468,7 @@ td{
         padding: 20px 0px 20px 0px;        
     }
     .detox-header-2 p{
-        width:70%;
+        width: 60%;
         left:4%;
     }
     .detox-header-3{
